--- a/resource.language.da_dk/resources/strings.po
+++ b/resource.language.da_dk/resources/strings.po
@@ -2935,11 +2935,11 @@ msgstr "Regel for timeroptagelse slettet"
 
 msgctxt "#829"
 msgid "View reminder"
-msgstr "Vis påmindelser"
+msgstr "Vis påmindelse"
 
 msgctxt "#830"
 msgid "Edit reminder"
-msgstr "Rediger påmindelser"
+msgstr "Rediger påmindelse"
 
 msgctxt "#831"
 msgid "Mondays"
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "Søndage"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "Premiere"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "Direkte"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "Vil du kun slette denne timer eller også timer-reglen, som har planlagt den?"
@@ -2976,6 +2984,10 @@ msgstr "Vil du kun slette denne timer eller også timer-reglen, som har planlagt
 msgctxt "#841"
 msgid "Only this"
 msgstr "Kun denne"
+
+msgctxt "#842"
+msgid "New"
+msgstr "Ny"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "Bekræft stop af optagelse"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "Er du sikker på, at du vil stoppe denne optagelse?"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "Finale"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -5601,6 +5617,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "Ubegrænset / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "Resamplingskvalitet"
@@ -5672,6 +5696,14 @@ msgstr "Vælg kunsttype"
 msgctxt "#13522"
 msgid "Split albums into individual discs"
 msgstr "Del album op i enkelte diske"
+
+msgctxt "#13524"
+msgid "Use original release date of albums for year"
+msgstr "Anvend albummets originale udgivelsesdato som årstal"
+
+msgctxt "#13525"
+msgid "When enabled, use the original year of release rather than the album release year (if available)."
+msgstr "Ved aktivering, anvend det originale udgivelsesår i stedet for albummets udgivelsesår (hvis tilgængeligt)."
 
 msgctxt "#13550"
 msgid "Delay after change of refresh rate"
@@ -7345,6 +7377,14 @@ msgctxt "#19093"
 msgid "Instant recording: {0:s}"
 msgstr "Øjeblikkelig optagelse: {0:s}"
 
+msgctxt "#19094"
+msgid "Timer creation failed. Unsupported timer type."
+msgstr "Oprettelse af timeroptagelse mislykkedes. Timerens type er ikke understøttet."
+
+msgctxt "#19095"
+msgid "Timer rule creation failed. Unsupported timer type."
+msgstr "Oprettelse af regel for timeroptagelse mislykkedes. Timerens type er ikke understøttet."
+
 msgctxt "#19096"
 msgid "\"Smart select\""
 msgstr "\"Smart valg\""
@@ -7384,6 +7424,10 @@ msgstr "Indtast navn på mappen til optagelsen"
 msgctxt "#19105"
 msgid "Please select a channel"
 msgstr "Vælg venligst en kanal"
+
+msgctxt "#19106"
+msgid "Next recording on"
+msgstr "Næste optagelse d. "
 
 msgctxt "#19107"
 msgid "at"
@@ -7663,7 +7707,7 @@ msgstr "Standard starttidspunkt"
 
 msgctxt "#19176"
 msgid "Default end padding time"
-msgstr "	Standard sluttidspunkt"
+msgstr "\tStandard sluttidspunkt"
 
 msgctxt "#19177"
 msgid "Playback"
@@ -7701,6 +7745,10 @@ msgctxt "#19185"
 msgid "Clear data"
 msgstr "Ryd data"
 
+msgctxt "#19186"
+msgid "All your TV related data (channels, groups, guide, timers, clients) will be cleared. Are you sure?"
+msgstr "Alt tv-relateret data (kanaler, grupper, timeroptagelser og klienter) vil blive nulstillet. Er du sikker?"
+
 msgctxt "#19187"
 msgid "Clearing all related data."
 msgstr "Sletter alle relaterede data."
@@ -7732,6 +7780,10 @@ msgstr "Kanalskanningen kunne ikke startes. Check loggen for detaljer om denne b
 msgctxt "#19194"
 msgid "Continue?"
 msgstr "Fortsæt?"
+
+msgctxt "#19195"
+msgid "Delay mark last watched"
+msgstr "Forsink marker som set"
 
 msgctxt "#19196"
 msgid "PVR client specific actions"
@@ -7948,6 +8000,10 @@ msgstr "Daglig vækningstid (TT:MM:SS)"
 msgctxt "#19249"
 msgid "Filter channels"
 msgstr "Filtrer kanaler"
+
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "Tv- og radiokanaler"
 
 msgctxt "#19251"
 msgid "Update guide information"
@@ -8167,11 +8223,15 @@ msgstr "Se regel for timeroptagelse"
 
 msgctxt "#19312"
 msgid "PVR reminder"
-msgstr "PVR påmindelser"
+msgstr "PVR påmindelse"
 
 msgctxt "#19313"
 msgid "Automatically close reminder popup after"
 msgstr "Luk automatisk påmindelser efter"
+
+msgctxt "#19315"
+msgid "Backend order"
+msgstr "Rækkefølge for backend"
 
 msgctxt "#19317"
 msgid "12 hours back"
@@ -8197,9 +8257,21 @@ msgctxt "#19322"
 msgid "First channel"
 msgstr "Første kanal"
 
+msgctxt "#19323"
+msgid "Playing channel"
+msgstr "Afspillende kanal"
+
 msgctxt "#19324"
 msgid "Last channel"
 msgstr "Sidste kanal"
+
+msgctxt "#19325"
+msgid "Programme"
+msgstr "Program"
+
+msgctxt "#19326"
+msgid "Navigate..."
+msgstr "Naviger..."
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -9341,6 +9413,10 @@ msgctxt "#20225"
 msgid "Where no local album cover exists, online art will be used. Where neither is available, cover images embedded in music files will be used"
 msgstr "Når intet lokalt albumcover eksisterer, anvendes online cover. Hvis begge ikke eksisterer anvendes billede fra musikfilen"
 
+msgctxt "#20226"
+msgid "Movie set information folder"
+msgstr "Mappe til filmsæt-information"
+
 msgctxt "#20228"
 msgid "Use artist sortname when sorting by artist"
 msgstr "Anvend kunstnernavn ved sortering efter kunstner"
@@ -9607,7 +9683,7 @@ msgstr "Information om afsnit"
 
 msgctxt "#20353"
 msgid "Loading TV show details"
-msgstr "	Indlæser detaljer om tv-serie"
+msgstr "\tIndlæser detaljer om tv-serie"
 
 msgctxt "#20354"
 msgid "Fetching episode guide"
@@ -10083,7 +10159,7 @@ msgstr "Vis tomme tv-serier"
 
 msgctxt "#21330"
 msgid "Show hidden files and directories"
-msgstr "Vis skjulte filer og mapper	"
+msgstr "Vis skjulte filer og mapper\t"
 
 msgctxt "#21331"
 msgid "New media detected"
@@ -10403,7 +10479,7 @@ msgstr "Match emner hvor"
 
 msgctxt "#21423"
 msgid "New rule..."
-msgstr "Ny regel...	"
+msgstr "Ny regel...\t"
 
 msgctxt "#21424"
 msgid "Items must match"
@@ -11661,6 +11737,10 @@ msgctxt "#24134"
 msgid "Download subtitle..."
 msgstr "Hent undertekst..."
 
+msgctxt "#24135"
+msgid "To use this feature you must enable an add-on:"
+msgstr "For at benytte denne funktion må du aktivere et add-on:"
+
 msgctxt "#24136"
 msgid "Would you like to enable this add-on?"
 msgstr "Vil du aktivere dette add-on?"
@@ -11736,6 +11816,10 @@ msgstr "90 sekunder"
 msgctxt "#24159"
 msgid "120 Seconds"
 msgstr "120 sekunder"
+
+msgctxt "#24162"
+msgid "Use Kodi virtual keyboard"
+msgstr "Benyt Kodi virtuelt tastatur"
 
 msgctxt "#24991"
 msgid "Could not connect to repository."
@@ -14555,7 +14639,7 @@ msgstr "Ved aktivering vil VAAPI renderings-metoder være foretrukket og CPU-bel
 
 msgctxt "#36434"
 msgid "Allow hardware acceleration - MMAL"
-msgstr "Tillad hardwareacceleration (MMAL)"
+msgstr "Tillad hardwareacceleration - MMAL"
 
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
@@ -14567,7 +14651,7 @@ msgstr "Vælg OS tastaturlayout."
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
-msgstr "Indstil antallet af trin for lydstyrkekontrol"
+msgstr "Indstil antallet af trin for lydstyrkekontrol."
 
 msgctxt "#36460"
 msgid "Event logging allows to keep track of what has happened."
