--- a/resource.language.en_us/resources/strings.po
+++ b/resource.language.en_us/resources/strings.po
@@ -2709,6 +2709,10 @@ msgctxt "#751"
 msgid "Removing source"
 msgstr "Removing source"
 
+msgctxt "#752"
+msgid "Opacity"
+msgstr "Opacity"
+
 msgctxt "#754"
 msgid "Add program link"
 msgstr "Add program link"
@@ -2760,6 +2764,10 @@ msgstr "Light gray"
 msgctxt "#767"
 msgid "Grey"
 msgstr "Gray"
+
+msgctxt "#768"
+msgid "Dark Grey"
+msgstr "Dark Gray"
 
 msgctxt "#770"
 msgid "Error {0:d}: share not available"
@@ -2885,6 +2893,10 @@ msgctxt "#818"
 msgid "Max recordings"
 msgstr "Max recordings"
 
+msgctxt "#819"
+msgid "One time (Scheduled by timer rule)"
+msgstr "One time (Scheduled by timer rule)"
+
 msgctxt "#820"
 msgid "One time"
 msgstr "One time"
@@ -2901,9 +2913,33 @@ msgctxt "#823"
 msgid "Timer rule (guide-based)"
 msgstr "Timer rule (guide-based)"
 
+msgctxt "#824"
+msgid "Reminder: {0:s}"
+msgstr "Reminder: {0:s}"
+
+msgctxt "#825"
+msgid "Recording: {0:s}"
+msgstr "Recording: {0:s}"
+
+msgctxt "#826"
+msgid "Set reminder"
+msgstr "Set reminder"
+
+msgctxt "#827"
+msgid "Delete reminder"
+msgstr "Delete reminder"
+
 msgctxt "#828"
 msgid "Timer rule deleted"
 msgstr "Timer rule deleted"
+
+msgctxt "#829"
+msgid "View reminder"
+msgstr "View reminder"
+
+msgctxt "#830"
+msgid "Edit reminder"
+msgstr "Edit reminder"
 
 msgctxt "#831"
 msgid "Mondays"
@@ -2933,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "Sundays"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "Premiere"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "Live"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "Do you only want to delete this timer or also the timer rule that has scheduled it?"
@@ -2940,6 +2984,10 @@ msgstr "Do you only want to delete this timer or also the timer rule that has sc
 msgctxt "#841"
 msgid "Only this"
 msgstr "Only this"
+
+msgctxt "#842"
+msgid "New"
+msgstr "New"
 
 msgctxt "#843"
 msgid "Activate"
@@ -2964,6 +3012,10 @@ msgstr "Confirm stop recording"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "Are you sure you want to stop this recording?"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "Finale"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -4433,6 +4485,10 @@ msgctxt "#12342"
 msgid "Incorrect password,"
 msgstr "Incorrect password,"
 
+msgctxt "#12343"
+msgid "retries left"
+msgstr "retries left"
+
 msgctxt "#12344"
 msgid "Passwords entered did not match."
 msgstr "Passwords entered did not match."
@@ -4500,6 +4556,10 @@ msgstr "Amount of time to display each image"
 msgctxt "#12379"
 msgid "Use pan and zoom effects"
 msgstr "Use pan and zoom effects"
+
+msgctxt "#12381"
+msgid "Switch to visualisation on playback"
+msgstr "Switch to visualization on playback"
 
 msgctxt "#12382"
 msgid "{0:s} xx"
@@ -5461,6 +5521,10 @@ msgctxt "#13435"
 msgid "Enable HQ scalers for scaling above"
 msgstr "Enable HQ scalers for scaling above"
 
+msgctxt "#13436"
+msgid "Use display HDR capabilities"
+msgstr "Use display HDR capabilities"
+
 msgctxt "#13437"
 msgid "Prefer VDPAU video mixer"
 msgstr "Prefer VDPAU video mixer"
@@ -5565,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "Unlimited / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "Resample quality"
@@ -5632,6 +5704,22 @@ msgstr "Embedded fanart"
 msgctxt "#13521"
 msgid "Choose art type"
 msgstr "Choose art type"
+
+msgctxt "#13522"
+msgid "Split albums into individual discs"
+msgstr "Split albums into individual discs"
+
+msgctxt "#13523"
+msgid "When enabled, opening a multi-disc album shows the discs as individual items instead of all the songs. Opening a disc then shows the songs on that disc."
+msgstr "When enabled, opening a multi-disc album shows the discs as individual items instead of all the songs. Opening a disc then shows the songs on that disc."
+
+msgctxt "#13524"
+msgid "Use original release date of albums for year"
+msgstr "Use original release date of albums for year"
+
+msgctxt "#13525"
+msgid "When enabled, use the original year of release rather than the album release year (if available)."
+msgstr "When enabled, use the original year of release rather than the album release year (if available)."
 
 msgctxt "#13550"
 msgid "Delay after change of refresh rate"
@@ -7185,6 +7273,14 @@ msgctxt "#19062"
 msgid "Sort by: Channel"
 msgstr "Sort by: Channel"
 
+msgctxt "#19063"
+msgid "First programme"
+msgstr "First program"
+
+msgctxt "#19064"
+msgid "Last programme"
+msgstr "Last program"
+
 msgctxt "#19065"
 msgid "Timer settings"
 msgstr "Timer settings"
@@ -7204,6 +7300,10 @@ msgstr "Recording settings"
 msgctxt "#19069"
 msgid "Guide"
 msgstr "Guide"
+
+msgctxt "#19070"
+msgid "Current programme"
+msgstr "Current program"
 
 msgctxt "#19071"
 msgid "Update interval"
@@ -7293,6 +7393,14 @@ msgctxt "#19093"
 msgid "Instant recording: {0:s}"
 msgstr "Instant recording: {0:s}"
 
+msgctxt "#19094"
+msgid "Timer creation failed. Unsupported timer type."
+msgstr "Timer creation failed. Unsupported timer type."
+
+msgctxt "#19095"
+msgid "Timer rule creation failed. Unsupported timer type."
+msgstr "Timer rule creation failed. Unsupported timer type."
+
 msgctxt "#19096"
 msgid "\"Smart select\""
 msgstr "\"Smart select\""
@@ -7332,6 +7440,10 @@ msgstr "Enter the name of the folder for the recording"
 msgctxt "#19105"
 msgid "Please select a channel"
 msgstr "Please select a channel"
+
+msgctxt "#19106"
+msgid "Next recording on"
+msgstr "Next recording on"
 
 msgctxt "#19107"
 msgid "at"
@@ -7649,6 +7761,10 @@ msgctxt "#19185"
 msgid "Clear data"
 msgstr "Clear data"
 
+msgctxt "#19186"
+msgid "All your TV related data (channels, groups, guide, timers, clients) will be cleared. Are you sure?"
+msgstr "All your TV related data (channels, groups, guide, timers, clients) will be cleared. Are you sure?"
+
 msgctxt "#19187"
 msgid "Clearing all related data."
 msgstr "Clearing all related data."
@@ -7760,6 +7876,10 @@ msgstr "Select backend"
 msgctxt "#19214"
 msgid "Enter a valid URL for the new channel"
 msgstr "Enter a valid URL for the new channel"
+
+msgctxt "#19215"
+msgid "Reminders"
+msgstr "Reminders"
 
 msgctxt "#19216"
 msgid "All radio channels"
@@ -7896,6 +8016,10 @@ msgstr "Daily wakeup time (HH:MM:SS)"
 msgctxt "#19249"
 msgid "Filter channels"
 msgstr "Filter channels"
+
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "TV and radio channels"
 
 msgctxt "#19251"
 msgid "Update guide information"
@@ -8045,6 +8169,10 @@ msgctxt "#19287"
 msgid "All channels"
 msgstr "All channels"
 
+msgctxt "#19288"
+msgid "Date selector"
+msgstr "Date selector"
+
 msgctxt "#19289"
 msgid "Hide group"
 msgstr "Hide group"
@@ -8108,6 +8236,94 @@ msgstr "Close channel OSD after switching channels"
 msgctxt "#19304"
 msgid "View timer rule"
 msgstr "View timer rule"
+
+msgctxt "#19305"
+msgid "Deleted missed PVR reminder for '{0:s}' on channel '{1:s}' at '{2:s}'"
+msgstr "Deleted missed PVR reminder for '{0:s}' on channel '{1:s}' at '{2:s}'"
+
+msgctxt "#19306"
+msgid "Deleted missed PVR reminder for channel '{0:s}' at '{1:s}'"
+msgstr "Deleted missed PVR reminder for channel '{0:s}' at '{1:s}'"
+
+msgctxt "#19307"
+msgid "Reminder for [B]{0:s}[/B] on channel [B]{1:s}[/B] at [B]{2:s}[/B]."
+msgstr "Reminder for [B]{0:s}[/B] on channel [B]{1:s}[/B] at [B]{2:s}[/B]."
+
+msgctxt "#19308"
+msgid "Reminder for channel [B]{0:s}[/B] at [B]{1:s}[/B]."
+msgstr "Reminder for channel [B]{0:s}[/B] at [B]{1:s}[/B]."
+
+msgctxt "#19309"
+msgid "(Auto-close of this reminder will schedule a recording...)"
+msgstr "(Auto-close of this reminder will schedule a recording...)"
+
+msgctxt "#19310"
+msgid "Scheduled recording for auto-closed PVR reminder for '{0:s}' on channel '{1:s}' at '{2:s}'"
+msgstr "Scheduled recording for auto-closed PVR reminder for '{0:s}' on channel '{1:s}' at '{2:s}'"
+
+msgctxt "#19311"
+msgid "Scheduled recording for auto-closed PVR reminder for channel '{0:s}' at '{1:s}'"
+msgstr "Scheduled recording for auto-closed PVR reminder for channel '{0:s}' at '{1:s}'"
+
+msgctxt "#19312"
+msgid "PVR reminder"
+msgstr "PVR reminder"
+
+msgctxt "#19313"
+msgid "Automatically close reminder popup after"
+msgstr "Automatically close reminder popup after"
+
+msgctxt "#19314"
+msgid "Schedule recording when auto-closing the reminder popup"
+msgstr "Schedule recording when auto-closing the reminder popup"
+
+msgctxt "#19315"
+msgid "Backend order"
+msgstr "Backend order"
+
+msgctxt "#19316"
+msgid "Start group channel numbers from 1"
+msgstr "Start group channel numbers from 1"
+
+msgctxt "#19317"
+msgid "12 hours back"
+msgstr "12 hours back"
+
+msgctxt "#19318"
+msgid "12 hours forward"
+msgstr "12 hours forward"
+
+msgctxt "#19319"
+msgid "Previous group"
+msgstr "Previous group"
+
+msgctxt "#19320"
+msgid "Next group"
+msgstr "Next group"
+
+msgctxt "#19321"
+msgid "Group selector"
+msgstr "Group selector"
+
+msgctxt "#19322"
+msgid "First channel"
+msgstr "First channel"
+
+msgctxt "#19323"
+msgid "Playing channel"
+msgstr "Playing channel"
+
+msgctxt "#19324"
+msgid "Last channel"
+msgstr "Last channel"
+
+msgctxt "#19325"
+msgid "Programme"
+msgstr "Program"
+
+msgctxt "#19326"
+msgid "Navigate..."
+msgstr "Navigate..."
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -8476,6 +8692,10 @@ msgstr "Channel guide"
 msgctxt "#19687"
 msgid "Play recording"
 msgstr "Play recording"
+
+msgctxt "#19690"
+msgid "PVR has scheduled a reminder for '{0:s}' on channel '{1:s}' in {2:s}."
+msgstr "PVR has scheduled a reminder for '{0:s}' on channel '{1:s}' in {2:s}."
 
 msgctxt "#19691"
 msgid "PVR is currently recording '{0:s}' on channel '{1:s}'."
@@ -9248,6 +9468,10 @@ msgstr "Prefer online album art"
 msgctxt "#20225"
 msgid "Where no local album cover exists, online art will be used. Where neither is available, cover images embedded in music files will be used"
 msgstr "Where no local album cover exists, online art will be used. Where neither is available, cover images embedded in music files will be used"
+
+msgctxt "#20226"
+msgid "Movie set information folder"
+msgstr "Movie set information folder"
 
 msgctxt "#20228"
 msgid "Use artist sortname when sorting by artist"
@@ -11573,6 +11797,10 @@ msgctxt "#24134"
 msgid "Download subtitle..."
 msgstr "Download subtitle..."
 
+msgctxt "#24135"
+msgid "To use this feature you must enable an add-on:"
+msgstr "To use this feature you must enable an add-on:"
+
 msgctxt "#24136"
 msgid "Would you like to enable this add-on?"
 msgstr "Would you like to enable this add-on?"
@@ -11632,6 +11860,50 @@ msgstr "Add-on migration in progress - please wait"
 msgctxt "#24152"
 msgid "The add-on is not compatible with this version of Kodi."
 msgstr "The add-on is not compatible with this version of Kodi."
+
+msgctxt "#24153"
+msgid "Enable to make the Siri remote match the normal Apple tvOS behavior"
+msgstr "Enable to make the Siri remote match the normal Apple tvOS behavior"
+
+msgctxt "#24154"
+msgid "Idle remote handling after N seconds"
+msgstr "Idle remote handling after N seconds"
+
+msgctxt "#24155"
+msgid "After remote idles, the first tap/swipe received will wake it"
+msgstr "After remote idles, the first tap/swipe received will wake it"
+
+msgctxt "#24156"
+msgid "30 Seconds"
+msgstr "30 Seconds"
+
+msgctxt "#24157"
+msgid "60 Seconds"
+msgstr "60 Seconds"
+
+msgctxt "#24158"
+msgid "90 Seconds"
+msgstr "90 Seconds"
+
+msgctxt "#24159"
+msgid "120 Seconds"
+msgstr "120 Seconds"
+
+msgctxt "#24160"
+msgid "Enable Siri remote timeout"
+msgstr "Enable Siri remote timeout"
+
+msgctxt "#24161"
+msgid "Enable remote input timeout for tap/swipe"
+msgstr "Enable remote input timeout for tap/swipe"
+
+msgctxt "#24162"
+msgid "Use Kodi virtual keyboard"
+msgstr "Use Kodi virtual keyboard"
+
+msgctxt "#24163"
+msgid "Match Apple tvOS Standard (Siri remote)"
+msgstr "Match Apple tvOS Standard (Siri remote)"
 
 msgctxt "#24991"
 msgid "Could not connect to repository."
@@ -13757,6 +14029,14 @@ msgctxt "#36204"
 msgid "Import channel groups from the PVR backend (if supported). Will delete user created groups if they're not found on the backend."
 msgstr "Import channel groups from the PVR backend (if supported). Will delete user created groups if they're not found on the backend."
 
+msgctxt "#36205"
+msgid "Sort the channels by channel number from the backend, but use local numbering for channels."
+msgstr "Sort the channels by channel number from the backend, but use local numbering for channels."
+
+msgctxt "#36206"
+msgid "Use the channel numbering from the backend. Only works with one enabled PVR add-on!"
+msgstr "Use the channel numbering from the backend. Only works with one enabled PVR add-on!"
+
 msgctxt "#36207"
 msgid "Open the channel manager, which allows modifying the channel order, channel name, icon, etc."
 msgstr "Open the channel manager, which allows modifying the channel order, channel name, icon, etc."
@@ -13833,6 +14113,10 @@ msgctxt "#36226"
 msgid "This category contains the PVR playback and channel switching settings."
 msgstr "This category contains the PVR playback and channel switching settings."
 
+msgctxt "#36227"
+msgid "Switch to full screen display when starting playback of channels."
+msgstr "Switch to full screen display when starting playback of channels."
+
 msgctxt "#36228"
 msgid "Set the colour to be used for the subtitle background."
 msgstr "Set the color to be used for the subtitle background."
@@ -13852,6 +14136,10 @@ msgstr "When flipping through channels using channel up/down buttons, channel sw
 msgctxt "#36232"
 msgid "When pressing channel up or down, the actual channel switch is delayed, allowing the user to flip to a channel number without waiting for each channel switch."
 msgstr "When pressing channel up or down, the actual channel switch is delayed, allowing the user to flip to a channel number without waiting for each channel switch."
+
+msgctxt "#36233"
+msgid "This category contains settings for recordings."
+msgstr "This category contains settings for recordings."
 
 msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
@@ -14097,6 +14385,34 @@ msgctxt "#36294"
 msgid "When sorting music items by artist use sortname e.g. Parton, Dolly rather than name."
 msgstr "When sorting music items by artist use sortname e.g. Parton, Dolly rather than name."
 
+msgctxt "#36295"
+msgid "Set the the subtitle opacity."
+msgstr "Set the the subtitle opacity."
+
+msgctxt "#36296"
+msgid "This category contains settings for reminders."
+msgstr "This category contains settings for reminders."
+
+msgctxt "#36297"
+msgid "Choose a time in seconds after which PVR reminder popups will be automatically closed."
+msgstr "Choose a time in seconds after which PVR reminder popups will be automatically closed."
+
+msgctxt "#36298"
+msgid "If enabled, a recording for the programme to remind will be scheduled when auto-closing the reminder popup, if supported by the PVR add-on and backend."
+msgstr "If enabled, a recording for the program to remind will be scheduled when auto-closing the reminder popup, if supported by the PVR add-on and backend."
+
+msgctxt "#36299"
+msgid "Switch display into HDR mode if media with HDR information is played.\nIf disabled, HDR information are applied using Kodi's internal HDR path."
+msgstr "Switch display into HDR mode if media with HDR information is played.\nIf disabled, HDR information are applied using Kodi's internal HDR path."
+
+msgctxt "#36300"
+msgid "Select the folder where movie set information (images) are saved locally."
+msgstr "Select the folder where movie set information (images) are saved locally."
+
+msgctxt "#36301"
+msgid "No 'Movie set information folder' is configured to store movie set images so they will not be exported. Do you want to proceed?"
+msgstr "No 'Movie set information folder' is configured to store movie set images so they will not be exported. Do you want to proceed?"
+
 msgctxt "#36302"
 msgid "No info available yet."
 msgstr "No info available yet."
@@ -14112,6 +14428,10 @@ msgstr "Section that contains settings related to pictures and how they are hand
 msgctxt "#36305"
 msgid "This category contains the settings for how picture file lists are handled."
 msgstr "This category contains the settings for how picture file lists are handled."
+
+msgctxt "#36306"
+msgid "If not using backend channel numbers then start all groups channel numbers from 1."
+msgstr "If not using backend channel numbers then start all groups channel numbers from 1."
 
 msgctxt "#36307"
 msgid "Automatically generate picture thumbnails when entering picture folder."
@@ -14216,6 +14536,10 @@ msgstr "Select between web interfaces installed via the add-on manager."
 msgctxt "#36333"
 msgid "This category contains the settings for how the remote control service is handled."
 msgstr "This category contains the settings for how the remote control service is handled."
+
+msgctxt "#36334"
+msgid "Allow programs on this device to control this application via the web interface or the JSON-RPC interface protocol."
+msgstr "Allow programs on this device to control this application via the web interface or the JSON-RPC interface protocol."
 
 msgctxt "#36335"
 msgid "Define the remote control port."
@@ -15513,6 +15837,34 @@ msgctxt "#38073"
 msgid "Do you want to refresh information for this item now?"
 msgstr "Do you want to refresh information for this item now?"
 
+msgctxt "#38074"
+msgid "Boxsets"
+msgstr "Boxsets"
+
+msgctxt "#38075"
+msgid "* All discs"
+msgstr "* All discs"
+
+msgctxt "#38076"
+msgid "Disc title"
+msgstr "Disc title"
+
+msgctxt "#38077"
+msgid "Total discs"
+msgstr "Total discs"
+
+msgctxt "#38078"
+msgid "Original year"
+msgstr "Original year"
+
+msgctxt "#38079"
+msgid "Original date"
+msgstr "Original date"
+
+msgctxt "#38080"
+msgid "BPM"
+msgstr "BPM"
+
 msgctxt "#38100"
 msgid "Section that contains the settings for the playback of media"
 msgstr "Section that contains the settings for the playback of media"
@@ -15560,6 +15912,10 @@ msgstr "This category contains the settings for the library databases"
 msgctxt "#38111"
 msgid "This category contains other settings for the GUI interface"
 msgstr "This category contains other settings for the GUI interface"
+
+msgctxt "#38112"
+msgid "Automatically go to the visualisation window when audio playback starts"
+msgstr "Automatically go to the visualization window when audio playback starts"
 
 msgctxt "#38190"
 msgid "Extract thumbnails from video files"
@@ -15904,3 +16260,7 @@ msgstr "Episode plot"
 msgctxt "#39117"
 msgid "Verbose logging for the [B]Announcer[/B] component"
 msgstr "Verbose logging for the [B]Announcer[/B] component"
+
+msgctxt "#39118"
+msgid "Share debug log"
+msgstr "Share debug log"
