--- a/resource.language.es_es/resources/strings.po
+++ b/resource.language.es_es/resources/strings.po
@@ -43,7 +43,7 @@ msgstr "Git de Kodi"
 
 msgctxt "#7"
 msgid "File manager"
-msgstr "Explorador de archivos"
+msgstr "Gestor de archivos"
 
 msgctxt "#8"
 msgid "Weather"
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "Domingos"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "Estreno"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "Directo"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "¿Sólo quiere eliminar esta programación o además la regla que lo ha programado?"
@@ -2976,6 +2984,10 @@ msgstr "¿Sólo quiere eliminar esta programación o además la regla que lo ha 
 msgctxt "#841"
 msgid "Only this"
 msgstr "Sólo este"
+
+msgctxt "#842"
+msgid "New"
+msgstr "Nuevo"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "Confirma detener grabación"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "¿Estás seguro de querer detener esta grabación?"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "Final"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -5613,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "Ilimitado / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "Calidad remuestreo"
@@ -7992,6 +8016,10 @@ msgstr "Hora para despertar cada día (HH:MM:SS)"
 msgctxt "#19249"
 msgid "Filter channels"
 msgstr "Filtrar canales"
+
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "Canales de TV y radio"
 
 msgctxt "#19251"
 msgid "Update guide information"
@@ -10555,7 +10583,7 @@ msgstr "Encontrar elementos que coincidan"
 
 msgctxt "#21435"
 msgid "Edit"
-msgstr "- Editar"
+msgstr "Editar"
 
 msgctxt "#21436"
 msgid "{0:d} items"
@@ -14085,6 +14113,10 @@ msgctxt "#36226"
 msgid "This category contains the PVR playback and channel switching settings."
 msgstr "Esta categoría contiene los ajustes para la reproducción de PVR y del cambio de canal."
 
+msgctxt "#36227"
+msgid "Switch to full screen display when starting playback of channels."
+msgstr "Cambia a pantalla completa cuando se inicia la reproducción de canales."
+
 msgctxt "#36228"
 msgid "Set the colour to be used for the subtitle background."
 msgstr "Establece el color a usar para el fondo del subtítulo."
@@ -15667,7 +15699,7 @@ msgstr "Elegir proveedor de información"
 
 msgctxt "#38026"
 msgid "Appearances"
-msgstr "Apariencias"
+msgstr "Apariciones"
 
 msgctxt "#38027"
 msgid "Decode the stereo stream from 3D files"
