--- a/resource.language.fi_fi/resources/strings.po
+++ b/resource.language.fi_fi/resources/strings.po
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "sunnuntaisin"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "Ensiesitys"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "Suora lähetys"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "Haluatko poistaa vain tämän ajastuksen vai myös ajastussäännön joka sen on määritellyt?"
@@ -2976,6 +2984,10 @@ msgstr "Haluatko poistaa vain tämän ajastuksen vai myös ajastussäännön jok
 msgctxt "#841"
 msgid "Only this"
 msgstr "Vain tämä"
+
+msgctxt "#842"
+msgid "New"
+msgstr "Uusi"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "Vahvista tallentamisen lopetus"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "Haluatko varmasti lopettaa tallentamisen?"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "Finaali"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -3757,6 +3773,10 @@ msgctxt "#10005"
 msgid "Not available"
 msgstr "Ei saatavilla"
 
+msgctxt "#10006"
+msgid "N/A"
+msgstr "N/A"
+
 msgctxt "#10007"
 msgid "System information"
 msgstr "Järjestelmätiedot"
@@ -4464,6 +4484,10 @@ msgstr "Anna uusi salasana uudelleen"
 msgctxt "#12342"
 msgid "Incorrect password,"
 msgstr "Väärä salasana,"
+
+msgctxt "#12343"
+msgid "retries left"
+msgstr "yritystä jäljellä "
 
 msgctxt "#12344"
 msgid "Passwords entered did not match."
@@ -5605,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "Rajoittamaton / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "Uudellennäytteistyksen laatu"
@@ -5680,6 +5712,14 @@ msgstr "Jaa albumit yksittäisiin levyihin"
 msgctxt "#13523"
 msgid "When enabled, opening a multi-disc album shows the discs as individual items instead of all the songs. Opening a disc then shows the songs on that disc."
 msgstr "Näyttää albumiin kuuluvat levyt omina kokonaisuuksinaan. Jos asetus on pois päältä, näytetään kaikki kappaleet yhdessä ilman levyjä."
+
+msgctxt "#13524"
+msgid "Use original release date of albums for year"
+msgstr "Käytä vuodelle albumin alkuperäistä julkaisupäiväystä"
+
+msgctxt "#13525"
+msgid "When enabled, use the original year of release rather than the album release year (if available)."
+msgstr "Kun käytössä, käytä alkuperäistä julkaisuvuotta albumin julkaisuvuoden sijaan (jos tiedossa)."
 
 msgctxt "#13550"
 msgid "Delay after change of refresh rate"
@@ -7976,6 +8016,10 @@ msgstr "Päivittäinen herätysaika (TT:MM:SS)"
 msgctxt "#19249"
 msgid "Filter channels"
 msgstr "Suodata kanavia"
+
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "TV ja radiokanavat"
 
 msgctxt "#19251"
 msgid "Update guide information"
@@ -14069,6 +14113,10 @@ msgctxt "#36226"
 msgid "This category contains the PVR playback and channel switching settings."
 msgstr "Tämä kategoria sisältää PVR:n toistoon ja kanavien vaihtoon liittyvät asetukset."
 
+msgctxt "#36227"
+msgid "Switch to full screen display when starting playback of channels."
+msgstr "Vaihda koko näytön tilaan, kun kanavan toisto alkaa."
+
 msgctxt "#36228"
 msgid "Set the colour to be used for the subtitle background."
 msgstr "Määritä tekstityksen taustan väri."
@@ -15804,6 +15852,18 @@ msgstr "Levyn nimi"
 msgctxt "#38077"
 msgid "Total discs"
 msgstr "Levyjen määrä"
+
+msgctxt "#38078"
+msgid "Original year"
+msgstr "Alkuperäinen vuosi"
+
+msgctxt "#38079"
+msgid "Original date"
+msgstr "Alkuperäinen päiväys"
+
+msgctxt "#38080"
+msgid "BPM"
+msgstr "BPM"
 
 msgctxt "#38100"
 msgid "Section that contains the settings for the playback of media"
