--- a/resource.language.fr_ca/resources/strings.po
+++ b/resource.language.fr_ca/resources/strings.po
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "les \ndimanches"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "Première"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "En direct"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "Voulez-vous supprimer cette minuterie ainsi que la règle de minuterie qui l’a planifiée ?"
@@ -2976,6 +2984,10 @@ msgstr "Voulez-vous supprimer cette minuterie ainsi que la règle de minuterie q
 msgctxt "#841"
 msgid "Only this"
 msgstr "Ceci seulement"
+
+msgctxt "#842"
+msgid "New"
+msgstr "Nouvelle"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "Confirmer l’arrêt d’enregistrement"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "Voulez-vous vraiment arrêter cet enregistrement ?"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "Finale"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -4507,7 +4523,7 @@ msgstr "Verrouillage source"
 
 msgctxt "#12358"
 msgid "Password entry was blank. Try again."
-msgstr "Le mot de passe était vide. Ressayer."
+msgstr "Le mot de passe était vide. Réssayez."
 
 msgctxt "#12360"
 msgid "Master lock"
@@ -4663,7 +4679,7 @@ msgstr "Suspendre"
 
 msgctxt "#13012"
 msgid "Exit"
-msgstr "Quitter"
+msgstr "Fermer"
 
 msgctxt "#13013"
 msgid "Reboot"
@@ -5612,6 +5628,14 @@ msgstr "Direct sur le plan"
 msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
+
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080/720 (> 30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "Illimité/1080 (>30 Hz)"
 
 msgctxt "#13505"
 msgid "Resample quality"
@@ -13139,7 +13163,7 @@ msgstr "Menu des jeux"
 
 msgctxt "#35222"
 msgid "Exit"
-msgstr "Quitter"
+msgstr "Fermer"
 
 msgctxt "#35223"
 msgid "Missing: {0:s}"
