--- a/resource.language.fr_fr/resources/strings.po
+++ b/resource.language.fr_fr/resources/strings.po
@@ -711,7 +711,7 @@ msgstr "Accroche "
 
 msgctxt "#203"
 msgid "Plot outline"
-msgstr "Résumé de l'intrigue "
+msgstr "Résumé "
 
 msgctxt "#204"
 msgid "Compilation"
@@ -799,7 +799,7 @@ msgstr "Décalage vertical"
 
 msgctxt "#227"
 msgid "Load audio CD information from online service"
-msgstr "Récupérer les informations des CD Audio depuis un service en ligne"
+msgstr "Récupérer les informations des CD depuis un service en ligne"
 
 msgctxt "#228"
 msgid "Shuffle playlist on load"
@@ -1951,7 +1951,7 @@ msgstr "Saisir le titre"
 
 msgctxt "#529"
 msgid "Error: Duplicate title"
-msgstr "Erreur : doublon"
+msgstr "Erreur : fichier en doublon"
 
 msgctxt "#530"
 msgid "Select genre"
@@ -2527,7 +2527,7 @@ msgstr "Journalisation détaillée pour le composant [B]guide électronique des 
 
 msgctxt "#687"
 msgid "From metadata"
-msgstr "Depuis les métadonnées"
+msgstr "Selon les métadonnées"
 
 msgctxt "#700"
 msgid "Cleaning up library"
@@ -2871,11 +2871,11 @@ msgstr "Éviter les doublons d'épisodes"
 
 msgctxt "#813"
 msgid "Start padding time"
-msgstr "Heure de début de remplissage"
+msgstr "Ajustement du temps de début"
 
 msgctxt "#814"
 msgid "End padding time"
-msgstr "Heure de fin de remplissage"
+msgstr "Ajustement du temps de fin"
 
 msgctxt "#815"
 msgid "Record all episodes"
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "Dimanches"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "Première"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "En direct"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "Faut-il seulement supprimer cette programmation ou bien aussi la programmation répétée qui l'a planifiée ?"
@@ -2976,6 +2984,10 @@ msgstr "Faut-il seulement supprimer cette programmation ou bien aussi la program
 msgctxt "#841"
 msgid "Only this"
 msgstr "Seulement ceci"
+
+msgctxt "#842"
+msgid "New"
+msgstr "Nouveau"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "Confirmation de stopper l'enregistrement"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "Faut-il vraiment stopper cet enregistrement ?"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "Finale"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -3723,7 +3739,7 @@ msgstr "Version plus récente nécessaire. Consulter le journal pour plus d'info
 
 msgctxt "#2102"
 msgid "{0:s} error"
-msgstr "{0:s} erreur"
+msgstr "Erreur de {0:s}"
 
 msgctxt "#2103"
 msgid "Add-on error"
@@ -5613,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "Sans limite / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "Qualité du rééchantillonnage"
@@ -6363,7 +6387,7 @@ msgstr "Vidéos - Médiathèque"
 
 msgctxt "#14237"
 msgid "Music Library"
-msgstr "Musithèque"
+msgstr "Phonothèque"
 
 msgctxt "#14240"
 msgid "Lists & Views"
@@ -7095,7 +7119,7 @@ msgstr "Chaînes TV"
 
 msgctxt "#19024"
 msgid "Radio channels"
-msgstr "Chaînes radio"
+msgstr "Chaînes Radio"
 
 msgctxt "#19025"
 msgid "Upcoming recordings"
@@ -7695,11 +7719,11 @@ msgstr "Groupes de chaînes radio"
 
 msgctxt "#19175"
 msgid "Default start padding time"
-msgstr "Écart de remplissage de début prédéfini"
+msgstr "Ajustement du temps de début prédéfini"
 
 msgctxt "#19176"
 msgid "Default end padding time"
-msgstr "Écart de remplissage de fin prédéfini"
+msgstr "Ajustement du temps de fin prédéfini"
 
 msgctxt "#19177"
 msgid "Playback"
@@ -7992,6 +8016,10 @@ msgstr "Heure de réveil quotidien (HH:MM:SS)"
 msgctxt "#19249"
 msgid "Filter channels"
 msgstr "Filtrer les chaînes"
+
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "Chaînes TV et radio"
 
 msgctxt "#19251"
 msgid "Update guide information"
@@ -9403,11 +9431,11 @@ msgstr "Changer le fournisseur d'informations"
 
 msgctxt "#20196"
 msgid "Export music library"
-msgstr "Exporter la musithèque"
+msgstr "Exporter la phonothèque"
 
 msgctxt "#20197"
 msgid "Import music library"
-msgstr "Importer une musithèque"
+msgstr "Importer une phonothèque"
 
 msgctxt "#20198"
 msgid "No artist found!"
@@ -9471,7 +9499,7 @@ msgstr "Applications Android"
 
 msgctxt "#20245"
 msgid "Windows music library"
-msgstr "Musithèque Windows"
+msgstr "Phonothèque Windows"
 
 msgctxt "#20246"
 msgid "Windows videos library"
@@ -9747,11 +9775,11 @@ msgstr "Chargement des détails des épisodes"
 
 msgctxt "#20362"
 msgid "Remove episode from library"
-msgstr "Retirer l'épisode"
+msgstr "Retirer l'épisode de la médiathèque"
 
 msgctxt "#20363"
 msgid "Remove TV show from library"
-msgstr "Retirer la série TV"
+msgstr "Retirer la série TV de la médiathèque"
 
 msgctxt "#20364"
 msgid "TV show"
@@ -11407,7 +11435,7 @@ msgstr "Installer depuis un fichier Zip"
 
 msgctxt "#24042"
 msgid "Downloading {0:d}%"
-msgstr "Téléchargement de {0:d}%"
+msgstr "Téléchargement {0:d} %"
 
 msgctxt "#24043"
 msgid "Available updates"
@@ -11415,7 +11443,7 @@ msgstr "Mises à jour disponibles"
 
 msgctxt "#24044"
 msgid "Installing {0:d}%"
-msgstr "Installation {0:d}%"
+msgstr "Installation {0:d} %"
 
 msgctxt "#24045"
 msgid "Failed to install Add-on from zip file"
@@ -11807,7 +11835,7 @@ msgstr "Analyseur de vidéothèque"
 
 msgctxt "#24146"
 msgid "Music library scanner"
-msgstr "Analyseur de la musithèque"
+msgstr "Analyseur de la phonothèque"
 
 msgctxt "#24147"
 msgid "Failed to scan {0:s}: {1:s}"
@@ -12279,7 +12307,7 @@ msgstr "Nostalgie"
 
 msgctxt "#29980"
 msgid "Enable RDS for radio channels"
-msgstr "Activer RDS pour les canaux radio"
+msgstr "Activer le RDS pour les chaînes radio"
 
 msgctxt "#29981"
 msgid "RDS data can be used if present"
@@ -13799,7 +13827,7 @@ msgstr "Ajuste la méthode utilisée pour afficher et effectuer le rendu de la v
 
 msgctxt "#36154"
 msgid "Use high quality scalers when upscaling a video by at least this percentage. A value below 5% makes little sense as video is processed with high GPU load without any visible picture quality improvements."
-msgstr "Utilise des redimensionnements de haute qualité (HQ) avec ce % minimum lors de la mise à l'échelle d'une vidéo. Une valeur inférieure à 5% n'a pas beaucoup d'intérêt car la vidéo sera traitée avec une charge GPU importante sans augmentation visible de la qualité d'image."
+msgstr "Utilise des redimensionnements de haute qualité (HQ) avec ce % minimum lors de la mise à l'échelle d'une vidéo. Une valeur inférieure à 5 % n'a pas beaucoup d'intérêt car la vidéo sera traitée avec une charge GPU importante sans augmentation visible de la qualité d'image."
 
 msgctxt "#36155"
 msgid "Enable VDPAU hardware decoding of video files, mainly used for NVIDIA graphics and in some circumstances AMD graphics."
@@ -14051,7 +14079,7 @@ msgstr "Dossier où se trouvent les icônes des chaînes."
 
 msgctxt "#36217"
 msgid "Scan for missing channel icons."
-msgstr "Rechercher les icônes manquantes des chaînes."
+msgstr "Recherche les icônes manquantes des chaînes."
 
 msgctxt "#36218"
 msgid "This category contains the electronic programming guide (EPG) settings."
@@ -14084,6 +14112,10 @@ msgstr "Supprime les données en cache du guide et les réimporte depuis le serv
 msgctxt "#36226"
 msgid "This category contains the PVR playback and channel switching settings."
 msgstr "Cette catégorie contient les paramètres de lecture de l'enregistreur vidéo (PVR) et de changement de chaînes."
+
+msgctxt "#36227"
+msgid "Switch to full screen display when starting playback of channels."
+msgstr "Bascule en affichage plein écran au démarrage de la lecture des chaînes."
 
 msgctxt "#36228"
 msgid "Set the colour to be used for the subtitle background."
@@ -14223,11 +14255,11 @@ msgstr "Si activée, cette fréquence de trames sera utilisée pour les diffusio
 
 msgctxt "#36262"
 msgid "Export parts of the music library to an XML file or NFO files. This will optionally overwrite your current NFO and artwork files."
-msgstr "Exporte des parties de la musithèque vers des fichiers XML ou NFO. Cela écrasera optionnellement les fichiers NFO et d'illustration existants."
+msgstr "Exporte des parties de la phonothèque vers des fichiers XML ou NFO. Cela écrasera optionnellement les fichiers NFO et d'illustration existants."
 
 msgctxt "#36263"
 msgid "Import an XML file into the music library database."
-msgstr "Importe un fichier XML dans la base de données de la musithèque."
+msgstr "Importe un fichier XML dans la base de données de la phonothèque."
 
 msgctxt "#36264"
 msgid "This category contains the settings for how music playback is handled."
@@ -15163,7 +15195,7 @@ msgstr "Gamma"
 
 msgctxt "#36575"
 msgid "Gamma for selected gamma curve type. For input and output offset, the result at 50% will match an absolute gamma curve with this gamma value."
-msgstr "Gamma pour le type de courbe gamma sélectionné. Pour le décalage en entrée et sortie, le résultat à 50% va faire correspondre une courbe gamma absolue avec cette valeur gamma."
+msgstr "Gamma pour le type de courbe gamma sélectionné. Pour le décalage en entrée et sortie, le résultat à 50 % va faire correspondre une courbe gamma absolue avec cette valeur gamma."
 
 msgctxt "#36576"
 msgid "Lookup table size"
@@ -15259,7 +15291,7 @@ msgstr "Précision de sortie du tramage vidéo en bits. Utiliser le plus haut pa
 
 msgctxt "#36600"
 msgid "This category contains the settings for how the music library is handled."
-msgstr "Cette catégorie contient les paramètres relatifs à la gestion de la musithèque."
+msgstr "Cette catégorie contient les paramètres relatifs à la gestion de la phonothèque."
 
 msgctxt "#36601"
 msgid "This category contains the settings for how music file lists are handled."
@@ -15751,7 +15783,7 @@ msgstr "Tous les rôles"
 
 msgctxt "#38060"
 msgid "Music library needs to rescan tags from files. Would you like to scan now?"
-msgstr "La musithèque doit effectuer une réanalyse des balises de fichiers.\nFaut-il l'effectuer maintenant ?"
+msgstr "La phonothèque doit effectuer une réanalyse des balises de fichiers.\nFaut-il l'effectuer maintenant ?"
 
 msgctxt "#38061"
 msgid "Fetch additional information for albums and artists? This could take some time so you may prefer to do this later"
@@ -15903,7 +15935,7 @@ msgstr "Réinitialiser la position de reprise"
 
 msgctxt "#38300"
 msgid "Export Music Library"
-msgstr "Exporter la musithèque"
+msgstr "Exporter la phonothèque"
 
 msgctxt "#38301"
 msgid "Single file"
@@ -16071,11 +16103,11 @@ msgstr "Ceci fournit l'accès aux emplacements où les sources d'images peuvent 
 
 msgctxt "#39008"
 msgid "Zoom - 120% width"
-msgstr "Zoom - Largeur 120%"
+msgstr "Zoom - Largeur 120 %"
 
 msgctxt "#39009"
 msgid "Zoom - 110% width"
-msgstr "Zoom - Largeur 110%"
+msgstr "Zoom - Largeur 110 %"
 
 msgctxt "#39010"
 msgid "Select sort method"
