--- a/resource.language.he_il/resources/strings.po
+++ b/resource.language.he_il/resources/strings.po
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: he_IL\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n == 2 && n % 1 == 0) ? 1: (n % 10 == 0 && n % 1 == 0 && n > 10) ? 2 : 3;\n"
 
 msgctxt "#0"
 msgid "Programs"
@@ -2893,6 +2893,10 @@ msgctxt "#818"
 msgid "Max recordings"
 msgstr "הקלטות מרביות"
 
+msgctxt "#819"
+msgid "One time (Scheduled by timer rule)"
+msgstr "פעם אחת (מתוזמן לפי כלל מתזמן)"
+
 msgctxt "#820"
 msgid "One time"
 msgstr "חד פעמי"
@@ -2908,6 +2912,14 @@ msgstr "חוקי שעון עצר"
 msgctxt "#823"
 msgid "Timer rule (guide-based)"
 msgstr "חוקי שעון עצר (לפי לוח שידורים)"
+
+msgctxt "#824"
+msgid "Reminder: {0:s}"
+msgstr "תזכורת: {0:s}"
+
+msgctxt "#825"
+msgid "Recording: {0:s}"
+msgstr "הקלטה: {0:s}"
 
 msgctxt "#826"
 msgid "Set reminder"
@@ -2956,6 +2968,10 @@ msgstr "ימי שבת"
 msgctxt "#837"
 msgid "Sundays"
 msgstr "ימי ראשון"
+
+msgctxt "#838"
+msgid "Première"
+msgstr "בכורה"
 
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
@@ -4060,6 +4076,10 @@ msgstr "רשימות ניגון מוזיקה"
 msgctxt "#10502"
 msgid "Music"
 msgstr "מוזיקה"
+
+msgctxt "#10503"
+msgid "Music playlist editor"
+msgstr "עורך רשימות ניגון"
 
 msgctxt "#10504"
 msgid "Top 100 songs"
@@ -6656,6 +6676,14 @@ msgstr "מפוקסל"
 msgctxt "#16297"
 msgid "Smooth"
 msgstr "חלק"
+
+msgctxt "#16298"
+msgid "Shows the game's pixels without any modifications."
+msgstr "מציג את הפיקסלים של המשחק ללא שום שינוי."
+
+msgctxt "#16299"
+msgid "Removes the jagged edges of pixels by evenly fading between adjacent pixels."
+msgstr "מסיר את הקצוות המשוננים של פיקסלים על ידי טשטוש הדדי בין פיקסלים סמוכים."
 
 msgctxt "#16300"
 msgid "Video scaling method"
@@ -13681,6 +13709,14 @@ msgctxt "#36218"
 msgid "This category contains the electronic programming guide (EPG) settings."
 msgstr "קטגורית המכילה הגדרות לוח השידורים (EPG)."
 
+msgctxt "#36219"
+msgid "Number of past days to show in the guide and to import from backends."
+msgstr "מספר הימים הקודמים להצגה במדריך ולייבוא משרתים אחוריים."
+
+msgctxt "#36220"
+msgid "Number of future days to show in the guide and to import from backends."
+msgstr "מספר הימים העתידיים להצגה במדריך ולייבוא משרתים אחוריים."
+
 msgctxt "#36221"
 msgid "Time between imports of guide data from backends."
 msgstr "פרק הזמן בין כל יבוא של נתוני לוח שידורים משרת האחורי."
@@ -15440,6 +15476,10 @@ msgstr "אמני שירים"
 msgctxt "#38313"
 msgid "Other artists"
 msgstr "אמנים אחרים"
+
+msgctxt "#38318"
+msgid "Unable to export data as the destination folder does not exist"
+msgstr "לא ניתן לייצא נתונים כיוון שתיקיית היעד לא קיימת"
 
 msgctxt "#38319"
 msgid "Export"
