--- a/resource.language.is_is/resources/strings.po
+++ b/resource.language.is_is/resources/strings.po
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: is_IS\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n % 10 != 1 || n % 100 == 11);\n"
 
 msgctxt "#0"
 msgid "Programs"
@@ -2941,6 +2941,10 @@ msgctxt "#841"
 msgid "Only this"
 msgstr "Aðeins þetta"
 
+msgctxt "#842"
+msgid "New"
+msgstr "Nýtt"
+
 msgctxt "#843"
 msgid "Activate"
 msgstr "Virkja"
@@ -5560,6 +5564,10 @@ msgstr "Beint á flöt"
 msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
+
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
 
 msgctxt "#13505"
 msgid "Resample quality"
@@ -11620,6 +11628,22 @@ msgstr "Yfirfærsla viðbóta í gangi - dokaðu við"
 msgctxt "#24152"
 msgid "The add-on is not compatible with this version of Kodi."
 msgstr "Viðbótin er ekki samhæfð þessari útgáfu af Kodi."
+
+msgctxt "#24156"
+msgid "30 Seconds"
+msgstr "30 Sekúndur"
+
+msgctxt "#24157"
+msgid "60 Seconds"
+msgstr "60 Sekúndur"
+
+msgctxt "#24158"
+msgid "90 Seconds"
+msgstr "90 Sekúndur"
+
+msgctxt "#24159"
+msgid "120 Seconds"
+msgstr "120 Sekúndur"
 
 msgctxt "#24991"
 msgid "Could not connect to repository."
