--- a/resource.language.ja_jp/resources/strings.po
+++ b/resource.language.ja_jp/resources/strings.po
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "毎週日曜"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "プレミア"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "ライブ"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "このタイマーのみを削除、もしくは予約したタイマールールも削除しますか？"
@@ -2976,6 +2984,10 @@ msgstr "このタイマーのみを削除、もしくは予約したタイマー
 msgctxt "#841"
 msgid "Only this"
 msgstr "この予約のみ"
+
+msgctxt "#842"
+msgid "New"
+msgstr "ニュース"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "録画停止の確認"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "この録画を停止してもよろしいですか？"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "フィナーレ"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -4541,6 +4557,10 @@ msgctxt "#12379"
 msgid "Use pan and zoom effects"
 msgstr "パンおよびズームエフェクトを使用する"
 
+msgctxt "#12381"
+msgid "Switch to visualisation on playback"
+msgstr "再生時にビジュアライザに切り替える"
+
 msgctxt "#12382"
 msgid "{0:s} xx"
 msgstr "{0:s} xx"
@@ -5609,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "制限なし / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "リサンプル クオリティ"
@@ -5684,6 +5712,14 @@ msgstr "アルバムを個々のディスクに分割する"
 msgctxt "#13523"
 msgid "When enabled, opening a multi-disc album shows the discs as individual items instead of all the songs. Opening a disc then shows the songs on that disc."
 msgstr "有効にすると、マルチディスクアルバムを開いたとき、すべての楽曲ではなく個別のアイテムとしてディスクが表示されます。ディスクを開くと、そのディスク上の楽曲が表示されます。"
+
+msgctxt "#13524"
+msgid "Use original release date of albums for year"
+msgstr "リリース日時にオリジナルアルバムのものを使用する"
+
+msgctxt "#13525"
+msgid "When enabled, use the original year of release rather than the album release year (if available)."
+msgstr "有効にすると、アルバムのリリース年ではなく、オリジナルのリリース年を使用します。(利用可能な場合)"
 
 msgctxt "#13550"
 msgid "Delay after change of refresh rate"
@@ -7981,6 +8017,10 @@ msgctxt "#19249"
 msgid "Filter channels"
 msgstr "チャンネルをフィルター"
 
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "TVとラジオのチャンネル"
+
 msgctxt "#19251"
 msgid "Update guide information"
 msgstr "ガイド情報の更新"
@@ -8204,6 +8244,10 @@ msgstr "PVRリマインダー"
 msgctxt "#19313"
 msgid "Automatically close reminder popup after"
 msgstr "自動的にリマインダーのポップアップを閉じる"
+
+msgctxt "#19315"
+msgid "Backend order"
+msgstr "バックエンドオーダー"
 
 msgctxt "#19317"
 msgid "12 hours back"
@@ -11776,6 +11820,10 @@ msgstr "アドオンの移行中です - お待ちください"
 msgctxt "#24152"
 msgid "The add-on is not compatible with this version of Kodi."
 msgstr "アドオンは、このバージョンのKodiと互換性がありません。"
+
+msgctxt "#24154"
+msgid "Idle remote handling after N seconds"
+msgstr "N秒後にアイドルリモート処理"
 
 msgctxt "#24156"
 msgid "30 Seconds"
@@ -15724,6 +15772,18 @@ msgstr "ディスク タイトル"
 msgctxt "#38077"
 msgid "Total discs"
 msgstr "合計ディスク"
+
+msgctxt "#38078"
+msgid "Original year"
+msgstr "オリジナル年"
+
+msgctxt "#38079"
+msgid "Original date"
+msgstr "オリジナル日時"
+
+msgctxt "#38080"
+msgid "BPM"
+msgstr "BPM"
 
 msgctxt "#38100"
 msgid "Section that contains the settings for the playback of media"
