--- a/resource.language.pt_br/resources/strings.po
+++ b/resource.language.pt_br/resources/strings.po
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "Domingos"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "Pré Estréia"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "Ao Vivo"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "Deseja remover este temporizador ou os temporizadores que se repetem que estejam agendados?"
@@ -2976,6 +2984,10 @@ msgstr "Deseja remover este temporizador ou os temporizadores que se repetem que
 msgctxt "#841"
 msgid "Only this"
 msgstr "Somente este"
+
+msgctxt "#842"
+msgid "New"
+msgstr "Novo"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "Confirmar parar de gravar"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "Deseja realmente interromper esta gravação?"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "Final"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -5613,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "Ilimitado / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "Qualidade de reamostragem"
@@ -7992,6 +8016,10 @@ msgstr "horário despertar diariamente (HH:MM:SS)"
 msgctxt "#19249"
 msgid "Filter channels"
 msgstr "Filtrar Canais"
+
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "Canais de Rádio e TV"
 
 msgctxt "#19251"
 msgid "Update guide information"
@@ -14085,6 +14113,10 @@ msgctxt "#36226"
 msgid "This category contains the PVR playback and channel switching settings."
 msgstr "Esta categoria contém os ajustes para reprodução de TV ao vivo e troca de canal."
 
+msgctxt "#36227"
+msgid "Switch to full screen display when starting playback of channels."
+msgstr "Alterne para a exibição em tela cheia ao iniciar a reprodução de canais."
+
 msgctxt "#36228"
 msgid "Set the colour to be used for the subtitle background."
 msgstr "Define a cor a ser usada no fundo da legenda."
@@ -15883,7 +15915,7 @@ msgstr "Esta categoria contém outros ajustes para interface gráfica"
 
 msgctxt "#38112"
 msgid "Automatically go to the visualisation window when audio playback starts"
-msgstr "Automaticamente vai para a janela de visualização quando a reprodução de áudio inicia"
+msgstr "Automaticamente vá para a janela de visualização quando a reprodução de áudio inicia"
 
 msgctxt "#38190"
 msgid "Extract thumbnails from video files"
