--- a/resource.language.sv_se/resources/strings.po
+++ b/resource.language.sv_se/resources/strings.po
@@ -2709,6 +2709,10 @@ msgctxt "#751"
 msgid "Removing source"
 msgstr "Radera källa"
 
+msgctxt "#752"
+msgid "Opacity"
+msgstr "Opacitet"
+
 msgctxt "#754"
 msgid "Add program link"
 msgstr "Lägg till programlänk"
@@ -2889,6 +2893,10 @@ msgctxt "#818"
 msgid "Max recordings"
 msgstr "Max inspelningar"
 
+msgctxt "#819"
+msgid "One time (Scheduled by timer rule)"
+msgstr "En gång (Schemalagd enligt timerregeln)"
+
 msgctxt "#820"
 msgid "One time"
 msgstr "En gång"
@@ -2905,9 +2913,17 @@ msgctxt "#823"
 msgid "Timer rule (guide-based)"
 msgstr "Timerregel (guidebaserad)"
 
+msgctxt "#824"
+msgid "Reminder: {0:s}"
+msgstr "Påminnelse: {0:s}"
+
 msgctxt "#825"
 msgid "Recording: {0:s}"
 msgstr "Inspelning: {0:s}"
+
+msgctxt "#826"
+msgid "Set reminder"
+msgstr "Ställ in påminnelse"
 
 msgctxt "#827"
 msgid "Delete reminder"
@@ -2917,9 +2933,13 @@ msgctxt "#828"
 msgid "Timer rule deleted"
 msgstr "Timerregel raderad"
 
+msgctxt "#829"
+msgid "View reminder"
+msgstr "Visa påminnelse"
+
 msgctxt "#830"
 msgid "Edit reminder"
-msgstr "Redigera påminnelser"
+msgstr "Redigera påminnelse"
 
 msgctxt "#831"
 msgid "Mondays"
@@ -2949,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "Söndagar"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "Premiär"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "Direktsänd"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "Vill du endast ta bort denna timer eller även den timerregel som har schemalagt den?"
@@ -2956,6 +2984,10 @@ msgstr "Vill du endast ta bort denna timer eller även den timerregel som har sc
 msgctxt "#841"
 msgid "Only this"
 msgstr "Endast denna"
+
+msgctxt "#842"
+msgid "New"
+msgstr "Ny"
 
 msgctxt "#843"
 msgid "Activate"
@@ -2980,6 +3012,10 @@ msgstr "Bekräfta avsluta inspelning"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "Är du säker på att du vill avbryta denna inspelningen?"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "Säsongsavslutning"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -4521,6 +4557,10 @@ msgctxt "#12379"
 msgid "Use pan and zoom effects"
 msgstr "Använd panorerings- och zoomeffekter"
 
+msgctxt "#12381"
+msgid "Switch to visualisation on playback"
+msgstr "Byt till visualisering vid uppspelning"
+
 msgctxt "#12382"
 msgid "{0:s} xx"
 msgstr "{0:s} xx"
@@ -5305,6 +5345,10 @@ msgctxt "#13388"
 msgid "Preset"
 msgstr "Förinställning"
 
+msgctxt "#13389"
+msgid "There are no presets available for this visualisation"
+msgstr "Det finns inga förinställningar för den här visualiseringen"
+
 msgctxt "#13390"
 msgid "There are no settings available\nfor this visualisation"
 msgstr "Det finns inga inställningar tillgängliga\nför den här visualiseringen"
@@ -5477,6 +5521,10 @@ msgctxt "#13435"
 msgid "Enable HQ scalers for scaling above"
 msgstr "Aktivera HQ-skalare för skalning över"
 
+msgctxt "#13436"
+msgid "Use display HDR capabilities"
+msgstr "Använd displayens HDR-kapabilitet"
+
 msgctxt "#13437"
 msgid "Prefer VDPAU video mixer"
 msgstr "Föredra VDPAU videomixer"
@@ -5581,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "Obegränsad / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "Omsamplingskvalitet"
@@ -5648,6 +5704,10 @@ msgstr "Inbäddad fanart"
 msgctxt "#13521"
 msgid "Choose art type"
 msgstr "Välj bildtyp"
+
+msgctxt "#13522"
+msgid "Split albums into individual discs"
+msgstr "Dela upp album i enskilda skivor"
 
 msgctxt "#13524"
 msgid "Use original release date of albums for year"
@@ -7209,6 +7269,10 @@ msgctxt "#19062"
 msgid "Sort by: Channel"
 msgstr "Sortera efter: Kanal"
 
+msgctxt "#19063"
+msgid "First programme"
+msgstr "Första programmet"
+
 msgctxt "#19064"
 msgid "Last programme"
 msgstr "Senaste programmet"
@@ -7232,6 +7296,10 @@ msgstr "Inspelningsinställningar"
 msgctxt "#19069"
 msgid "Guide"
 msgstr "Guide"
+
+msgctxt "#19070"
+msgid "Current programme"
+msgstr "Nuvarande program"
 
 msgctxt "#19071"
 msgid "Update interval"
@@ -7929,6 +7997,10 @@ msgctxt "#19249"
 msgid "Filter channels"
 msgstr "Filtrera kanaler"
 
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "TV- och radiokanaler"
+
 msgctxt "#19251"
 msgid "Update guide information"
 msgstr "Uppdatera guideinformation"
@@ -8177,9 +8249,21 @@ msgctxt "#19320"
 msgid "Next group"
 msgstr "Nästa grupp"
 
+msgctxt "#19321"
+msgid "Group selector"
+msgstr "Gruppväljare"
+
 msgctxt "#19322"
 msgid "First channel"
 msgstr "Första kanalen"
+
+msgctxt "#19323"
+msgid "Playing channel"
+msgstr "Spelar kanal"
+
+msgctxt "#19324"
+msgid "Last channel"
+msgstr "Föregående kanal"
 
 msgctxt "#19326"
 msgid "Navigate..."
@@ -13953,6 +14037,10 @@ msgctxt "#36232"
 msgid "When pressing channel up or down, the actual channel switch is delayed, allowing the user to flip to a channel number without waiting for each channel switch."
 msgstr "När man trycker kanal upp eller ned, fördröjs kanalbytet och tillåter på så sätt att byta till en kanal utan att behöva vänta på varje kanalbyte."
 
+msgctxt "#36233"
+msgid "This category contains settings for recordings."
+msgstr "Denna kategori innehåller inställningar för inspelningar."
+
 msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Inspelningstiden för direktinspelningar när du trycker på inspelningsknappen. Detta värde kommer att beaktas om \"Direktinspelningsåtgärd\" är inställd på \"Spela in under begränsad tid\""
@@ -14196,6 +14284,14 @@ msgstr "Välj den mapp där artistinformation (nfo-filer och bilder) ska sparas 
 msgctxt "#36294"
 msgid "When sorting music items by artist use sortname e.g. Parton, Dolly rather than name."
 msgstr "Vid sortering av musikobjekt efter artist, använder sorteringsnamn som t.ex. Parton, Dolly istället för namn."
+
+msgctxt "#36295"
+msgid "Set the the subtitle opacity."
+msgstr "Sätt undertextens opacitet."
+
+msgctxt "#36296"
+msgid "This category contains settings for reminders."
+msgstr "Denna kategori innehåller inställningar för påminnelser."
 
 msgctxt "#36302"
 msgid "No info available yet."
@@ -15824,6 +15920,10 @@ msgstr "Hur inställningar appliceras för informationsleverantörer"
 msgctxt "#38350"
 msgid "Importing song playback history"
 msgstr "Importera låtuppspelningshistorik"
+
+msgctxt "#38351"
+msgid "Matching data"
+msgstr "Matchande data"
 
 msgctxt "#38352"
 msgid "Updating songs"
