--- a/resource.language.tr_tr/resources/strings.po
+++ b/resource.language.tr_tr/resources/strings.po
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: tr_TR\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgctxt "#0"
 msgid "Programs"
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "Pazarları"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "Prömiyer"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "Canlı"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "Yalnızca bu zamanlayıcıyı mi yoksa beraberinde planlanmış olan zamanlayıcı kuralınıda silmek istiyor musunuz?"
@@ -2976,6 +2984,10 @@ msgstr "Yalnızca bu zamanlayıcıyı mi yoksa beraberinde planlanmış olan zam
 msgctxt "#841"
 msgid "Only this"
 msgstr "Sadece bunu"
+
+msgctxt "#842"
+msgid "New"
+msgstr "Yeni"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "Kaydı durdurmayı onayla"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "Bu kayıdı durdurmak istediğinizden emin misiniz?"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "Final"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -5613,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "Sınırsız / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "Yeniden örnekleme kalitesi"
@@ -7993,6 +8017,10 @@ msgctxt "#19249"
 msgid "Filter channels"
 msgstr "Kanalları filtrele"
 
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "TV ve radyo kanalları"
+
 msgctxt "#19251"
 msgid "Update guide information"
 msgstr "Rehber bilgisini güncelle"
@@ -8187,7 +8215,7 @@ msgstr "Yatay kanallar"
 
 msgctxt "#19299"
 msgid "Expires"
-msgstr "Saklama ömrü"
+msgstr "Süre sonu"
 
 msgctxt "#19300"
 msgid "Vertical channels, no group selector"
@@ -13475,7 +13503,7 @@ msgstr "Yeni yapılandırma değeri ayarlanamadı. Lütfen ayarlarınızı denet
 
 msgctxt "#36025"
 msgid "Send \"Inactive source\" command on shutdown"
-msgstr "Kapatma sırasında \"Etkin olmaya kaynak\" komutu gönder"
+msgstr "Kapatma sırasında \"Etkin olmayan kaynak\" komutu gönder"
 
 msgctxt "#36026"
 msgid "Devices to also put in standby mode"
@@ -14084,6 +14112,10 @@ msgstr "Önbelleğe alınan rehber verisini sil ve daha sonra arka uçtan yenide
 msgctxt "#36226"
 msgid "This category contains the PVR playback and channel switching settings."
 msgstr "Bu kategori PVR oynatımı ve kanal değiştirme ayarlarını içerir."
+
+msgctxt "#36227"
+msgid "Switch to full screen display when starting playback of channels."
+msgstr "Kanalları oynatmaya başlarken tam ekran görüntüsüne geçin."
 
 msgctxt "#36228"
 msgid "Set the colour to be used for the subtitle background."
