--- a/resource.language.zh_cn/resources/strings.po
+++ b/resource.language.zh_cn/resources/strings.po
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "每周日"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "首播"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "直播"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "仅删除此定时器或同时删除相关的定时器规则？"
@@ -2976,6 +2984,10 @@ msgstr "仅删除此定时器或同时删除相关的定时器规则？"
 msgctxt "#841"
 msgid "Only this"
 msgstr "仅本次"
+
+msgctxt "#842"
+msgid "New"
+msgstr "新的"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "确认停止录像"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "确定停止此录像吗？"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "结局"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -5613,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "无限制 / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "重采样质量"
@@ -7992,6 +8016,10 @@ msgstr "每日唤醒时间（HH:MM:SS）"
 msgctxt "#19249"
 msgid "Filter channels"
 msgstr "筛选频道"
+
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "电视和电台频道"
 
 msgctxt "#19251"
 msgid "Update guide information"
@@ -14084,6 +14112,10 @@ msgstr "删除缓存的指南数据并重新从后端导入。"
 msgctxt "#36226"
 msgid "This category contains the PVR playback and channel switching settings."
 msgstr "此功能区包含 PVR 播放和频道切换设置。"
+
+msgctxt "#36227"
+msgid "Switch to full screen display when starting playback of channels."
+msgstr "开始播放频道时切换到全屏显示。"
 
 msgctxt "#36228"
 msgid "Set the colour to be used for the subtitle background."
