--- a/resource.language.zh_tw/resources/strings.po
+++ b/resource.language.zh_tw/resources/strings.po
@@ -2969,6 +2969,14 @@ msgctxt "#837"
 msgid "Sundays"
 msgstr "每週日"
 
+msgctxt "#838"
+msgid "Première"
+msgstr "首映"
+
+msgctxt "#839"
+msgid "Live"
+msgstr "直播"
+
 msgctxt "#840"
 msgid "Do you only want to delete this timer or also the timer rule that has scheduled it?"
 msgstr "只刪除本次的定時或者刪除本時段的所有排程？"
@@ -2976,6 +2984,10 @@ msgstr "只刪除本次的定時或者刪除本時段的所有排程？"
 msgctxt "#841"
 msgid "Only this"
 msgstr "僅本次"
+
+msgctxt "#842"
+msgid "New"
+msgstr "新番"
 
 msgctxt "#843"
 msgid "Activate"
@@ -3000,6 +3012,10 @@ msgstr "確認停止錄影"
 msgctxt "#848"
 msgid "Are you sure you want to stop this recording?"
 msgstr "您確定要停止這段錄影嗎？"
+
+msgctxt "#849"
+msgid "Finale"
+msgstr "完結篇"
 
 msgctxt "#850"
 msgid "Invalid port number entered"
@@ -5613,6 +5629,14 @@ msgctxt "#13465"
 msgid "EGL"
 msgstr "EGL"
 
+msgctxt "#13466"
+msgid "1080 / 720 (>30Hz)"
+msgstr "1080 / 720 (>30Hz)"
+
+msgctxt "#13467"
+msgid "Unlimited / 1080 (>30Hz)"
+msgstr "無限制 / 1080 (>30Hz)"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "重取樣品質"
@@ -7067,7 +7091,7 @@ msgstr "PVR 後端{0:d} - {1:s}"
 
 msgctxt "#19017"
 msgid "Recordings"
-msgstr "錄音"
+msgstr "錄影"
 
 msgctxt "#19018"
 msgid "Folder with channel icons"
@@ -7992,6 +8016,10 @@ msgstr "每日喚醒時間 (HH:MM:SS)"
 msgctxt "#19249"
 msgid "Filter channels"
 msgstr "過濾頻道"
+
+msgctxt "#19250"
+msgid "TV and radio channels"
+msgstr "電視與廣播頻道"
 
 msgctxt "#19251"
 msgid "Update guide information"
@@ -14084,6 +14112,10 @@ msgstr "刪除快取中的節目指南資料並從後端重新匯入。"
 msgctxt "#36226"
 msgid "This category contains the PVR playback and channel switching settings."
 msgstr "此分類包含 PVR 播放和頻道切換的設定。"
+
+msgctxt "#36227"
+msgid "Switch to full screen display when starting playback of channels."
+msgstr "以全螢幕播放頻道"
 
 msgctxt "#36228"
 msgid "Set the colour to be used for the subtitle background."
